--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- EDIT FROM HERE -->
 
-  <title>DREF operations 2017</title>
+  <title>DREF Operations 2017</title>
 
   <!-- Tableau Script -->
   <script type="text/javascript">
