--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="text/javascript">
   function initViz() {
     var containerDiv = document.getElementById("vizContainer"),
-    url = "https://public.tableau.com/views/DREFoperations/Dashboard1?:embed=y&:display_count=yes&:toolbar=no",
+    url = "https://public.tableau.com/views/DREFoperations/Dashboard1",
     options = {
       hideTabs: true,
       hideToolbar: false,
